# budgie-extras

./: .gitignore  .gitmodules  ChangeLog  LICENSE  NEWS  POTFILES.skip  README.md  Readme.txt  budgie-extras-0.6.0.tar.xz.asc  getkeys.py  meson.build  meson_options.txt  mkrelease.sh  pre-commit  updatePot.sh
budgie-WPreviews/: README.md  Readme.txt  WPrviews.plugin  meson.build  wprviews.py  wprviews_backgrounder  wprviews_panelrunner  wprviews_tools.py  wprviews_window
budgie-advanced-brightness-controller/: README.md  meson.build
budgie-advanced-brightness-controller/icons/: meson.build
budgie-advanced-brightness-controller/src/: Applet.vala  advancedbrightnesscontroller.plugin  meson.build
budgie-applications-menu/: meson.build
budgie-applications-menu/applications-menu/: README.md  meson.build  meson_options.txt
budgie-brightness-controller/: README.md  meson.build
budgie-brightness-controller/data/: meson.build  org.ubuntubudgie.brightnesscontroller.metainfo.xml
budgie-brightness-controller/icons/: meson.build
budgie-brightness-controller/src/: Applet.vala  brightnesscontroller.plugin.in  config.h.in  meson.build
budgie-brightness-controller/vapi/: config.vapi
budgie-clockworks/: BudgieClockWorks.plugin  BudgieClockWorks.plugin.in  BudgieQuickNote.plugin  README.md  budgie_clockworks.py  colorpicker  cwtools.py  meson.build  org.ubuntubudgie.plugins.budgie-clockworks.gschema.xml
budgie-clockworks/data/: meson.build  org.ubuntubudgie.clockworks.metainfo.xml
budgie-clockworks/schema/: org.ubuntubudgie.plugins.budgie-clockworks.gschema.xml
budgie-countdown/: CountDown.plugin  CountDown.plugin.in  README.md  budgie-countdown.py  meson.build
budgie-countdown/data/: meson.build  org.ubuntubudgie.countdown.metainfo.xml
budgie-countdown/schema/: org.ubuntubudgie.plugins.budgie-countdown.gschema.xml
budgie-customclock/: CustomClockApplet.plugin.in  CustomClockApplet.vala  meson.build  org.ubuntubudgie.budgie-customclock.gschema.xml  plugin.gresource.xml  settings.ui
budgie-dropby/: BudgieDropBy.plugin  README.md  budgie_dropby.py  checkonwin  copy_flash  dropby_tools.py  dropover  meson.build  meson_post_install.py
budgie-dropby/data/: meson.build
budgie-dropby/src-wayland/: BudgieDropBy.plugin  budgie_dropby.py  dropover  meson.build
budgie-dropby/src-x11/: BudgieDropBy.plugin  README.md  copy_flash  dropover
budgie-extras-daemon/: README.md  meson.build  meson_post_install
budgie-extras-daemon/data/: chrome.layout  classicubuntubudgie.layout  cupertino.layout  eleven.layout  meson.build  redmond.layout  theone.layout  traditional.layout  ubuntubudgie.layout
budgie-extras-daemon/src/: .budgie-extras-daemon.desktop.in.swp  budgie-extras-daemon.1  budgie-extras-daemon.desktop.in  dbus.vala  invoke.py  layouts.vala  main.vala  manager.vala  meson.build
budgie-fuzzyclock/: README.md  meson.build
budgie-fuzzyclock/data/: meson.build  org.ubuntubudgie.fuzzyclock.metainfo.xml
budgie-fuzzyclock/fuzzyclock/: FuzzyClockApplet.plugin.in  FuzzyClockApplet.vala  meson.build
budgie-fuzzyclock/src/: FuzzyClockApplet.plugin.in  FuzzyClockApplet.vala  meson.build
budgie-hotcorners/: BHCorners.plugin  BudgieHotCorners.plugin  README.md  bhc-panelrunner  bhcorners  bhcorners.desktop  bhcorners.py  bhcsettings  bhctools.py  budgie_hcorners.py  meson.build  showdesktop
budgie-hotcorners/applet/: meson.build
budgie-hotcorners/icons/: meson.build
budgie-hotcorners/misc/: defaults  defaults.in  entrynames.vala  extract_names.py  meson.build  org.ubuntubudgie.budgie-extras.HotCorners-autostart.desktop  org.ubuntubudgie.budgie-extras.HotCorners-autostart.desktop.in  org.ubuntubudgie.budgie-extras.HotCorners-autostart.desktop.in.in  org.ubuntubudgie.budgie-extras.HotCorners.desktop.in  org.ubuntubudgie.budgie-extras.HotCorners.desktop.in.in  org.ubuntubudgie.hotcorners.metainfo.xml
budgie-hotcorners/po/: meson.build  nl_NL.po
budgie-hotcorners/schema/: org.ubuntubudgie.budgie-extras.HotCorners.gschema.xml.in  org.ubuntubudgie.plugins.budgie-hotcorners.gschema.xml  org.ubuntubudgie.plugins.budgie-hotcorners.gschema.xml.in
budgie-hotcorners/src/: HotCorners.plugin  HotCorners.plugin.in  HotCornersApplet.vala  budgie-hotcorners-settingswindow.vala  budgie-hotcorners.vala  config.h.in  (+1 more)
budgie-kangaroo/: BudgieKangaroo.plugin  BudgieKangaroo.plugin.in  README.md  budgie_kangaroo.py  meson.build
budgie-keyboard-autoswitch/: KeyboardAutoSwitch.plugin  README.md  budgie-keyboard-autoswitch.py  meson.build
budgie-langswitcher/: LangSwitch.plugin  README.md  budgie-langswitch.py  budgie-langswitcher.py  meson.build
budgie-network-manager/: meson.build
budgie-quickchar/: README.md  meson.build
budgie-quicknote/: BudgieQuickNote.plugin  QuickNoteApplet.plugin.in  QuickNoteApplet.vala  README.md  budgie_quicknote.py  meson.build  org.ubuntubudgie.plugins.quicknote.gschema.xml  style.css
budgie-recentlyused/: README.md  meson.build
budgie-rotation-lock/: BudgieRotationLock.plugin  README.md  budgie_rotation_lock.py  meson.build
budgie-screencast/: README.md  meson.build  meson_post_install
budgie-showtime/: BudgieShowTime.plugin  README.md  ShowTime  WallClock  bshowtime_panelrunner  budgie_showtime.py  clocktools.py  colorpicker  menupng  meson.build
budgie-takeabreak/: BudgieTakeaBreak.plugin  BudgieTakeaBreak.plugin.in  README.md  budgie_takeabreak.py  getkeys.py  meson.build  meson_post_install.py  message_window  takeabreak_run
budgie-trash/: README.md  meson.build
budgie-visualspace/: README.md  meson.build  navtrigger.sh  shownav  shownav_tools.py  visualspace  vs-left.bde  vs-right.bde
budgie-wallstreet/: README.md  meson.build
budgie-weathershow/: README.md  WeatherShow.plugin  cities  colorpicker  getweather.py  meson.build  weathershow.py  weathershow_desktop  weathertools.py  wshow_panelrunner
budgie-window-shuffler/: README.md  meson.build
budgie-wmover/: README.md  WMover.plugin  budgie-wmover.py  getkeys.py  meson.build  moverbar  set_keys.py  wmover.py  wmover_panelrunner  wmover_run  wmovertools.py
(+1342 files in other folders)
