#gnome = import('gnome')

PLUGIN = 'budgie-countdown'

install_data(
    'CountDown.plugin',
    'budgie-countdown.py',
    install_dir: join_paths(PLUGINS_INSTALL_DIR, PLUGIN)
)

install_data(
    'cr_green.png',
    'cr_red.png',
    'cr_yellow.png',
    'cr_spacer.png',
    'cr_grey.png',
    'budgie-countdown-symbolic.svg',
    install_dir: PIXMAPS_DIR
)
