#gnome = import('gnome')

PLUGIN = 'budgie-langswitcher'

install_data(
    'LangSwitch.plugin',
    'budgie-langswitcher.py',
    install_dir: join_paths(PLUGINS_INSTALL_DIR, PLUGIN)
)

install_data(
    'langswitch_bpanel.svg',
    'langswitch_menu.svg'
    'cr_spacer.png',
    install_dir: PIXMAPS_DIR
)
