#gnome = import('gnome')

PLUGIN = 'budgie-quicknote'

install_data(
    'BudgieQuickNote.plugin',
    'budgie_quicknote.py',
    install_dir: join_paths(PLUGINS_INSTALL_DIR, PLUGIN)
)

install_data(
    'budgie-quicknote-bpanel.svg',
    'budgie-quicknote-panel.svg',
    install_dir: PIXMAPS_DIR
)
