#gnome = import('gnome')

PLUGIN = 'budgie-rotation-lock'

install_data(
    'BudgieRotationLock.plugin',
    'budgie_rotation_lock.py',
    install_dir: join_paths(PLUGINS_INSTALL_DIR, PLUGIN)
)

install_data(
    'budgie-rotation-button.svg',
    'budgie-rotation-lock-button.svg',
    install_dir: PIXMAPS_DIR
)
